# Projet_Pokemon_IN204

./: CMakeLists.txt  CMakePresets.json  Carte.cpp  Carte.hpp  CarteBase.hpp  Jeu.cpp  Joueur.cpp  Joueur.hpp  README.MD  carte.hpp  chargement_cartes.cpp  def_types_carte.cpp  def_types_carte.hpp  jeu.cpp  joueur.hpp  traitement_json.py
anciens_trucs/: GraphiqueEssai.cpp
anciens_trucs/scenes/: scene.hpp
anciens_trucs/ui/: bouton.cpp  bouton.hpp  zones.cpp  zones.hpp
data/: cards_debut.json
graphics/scenes/: scene.hpp
include/: carte.hpp
src/: Carte.cpp  Carte.hpp  CarteBase.hpp  CarteDresseur.cpp  CarteDresseur.hpp  CartePokemon.cpp  CartePokemon.hpp  DeckLoader.cpp  DeckLoader.hpp  Dresseur.cpp  Dresseur.hpp  Jeu.cpp  Joueur.cpp  Joueur.hpp  Makefile  README_PROJET_IN204.md  main.cpp
src/core/: Game.cpp  Game.hpp
src/scene/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Scene.hpp
src/view/: AnimationCarte.hpp  ButtonView.cpp  ButtonView.hpp  CarteView.cpp  CarteView.hpp
